--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -98,10 +98,9 @@
         </mat-card>
       </mat-grid-tile>
     </mat-grid-list>
-    
 
-    <section class="contact">
-      <mat-grid-list cols="2" rowHeight="2:1">
+    <section class="contact-wrap">
+      <mat-grid-list  class="contact-container" cols="2" rowHeight="3:2">
         <mat-grid-tile>
           <div class="col talk">
             <h3>Talk with us</h3>
@@ -110,8 +109,8 @@
             <p>unveilinfo@gmail.com</p>
           </div>
         </mat-grid-tile>
-  
-        <mat-grid-tile>
+        <mat-grid-tile class="gc-container">
+          <mat-card class="card-wrap-two">
             <div class="row row-cols-1 row-cols-md-3 g-4">
               <div class="col form">
                 <div class="input-group input-group-sm mb-4">
@@ -139,10 +138,10 @@
                   <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
                 </div>
               </div>
-            </div>
+            </div>>
+          </mat-card>
         </mat-grid-tile>
       </mat-grid-list>
-    </section>
-    
+    </section>   
 </section>
   
