--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<section class="container-fluid landing-wrap">
+<section class="section-one">
   <div class="landing-bg">
     <div class="fade-bg">
       <div class="landing-content">
@@ -11,7 +11,7 @@
   </div>
 </section>
 
-<section class="wrap">
+<section class="section-two">
   <mat-grid-list cols="2" rowHeight="3:2">
     <mat-grid-tile class="grid">
       <mat-card class="card-wrap-one">
@@ -102,16 +102,16 @@
     <section class="contact-wrap">
       <mat-grid-list  class="contact-container" cols="2" rowHeight="3:2">
         <mat-grid-tile>
-          <div class="col talk">
+          <div class="col-talk">
             <h3>Talk with us</h3>
             <p>We are here to respond</p>
             <p>+234-00-000-000-00</p>
             <p>unveilinfo@gmail.com</p>
           </div>
         </mat-grid-tile>
-        <mat-grid-tile class="gc-container">
-          <mat-card class="card-wrap-two">
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+        <mat-grid-tile class="contact-form">
+          <mat-card class="card-wrap-three">
+            <div class="row row-cols-1 row-cols-lg-1 g-4">
               <div class="col form">
                 <div class="input-group input-group-sm mb-4">
                   <span class="input-group-text" id="inputGroup-sizing-sm">First Name</span>
