--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -5,23 +5,22 @@
         <h3 class="top-txt">Learn. Grow. Share</h3>
         <h1 class="landing-title">Unveil</h1>
         <h3 class="top-txt">Learn new skills  ||  Develop your Skills  ||  Share your skills</h3>
-        <a mat-flat-button routerLink="#" class="landing-button">Learn More</a>
+        <a mat-flat-button routerLink="#" class="landing-button lg-btn">Learn More</a>
       </div>
     </div>
   </div>
 </section>
 
 <section class="section-two">
+  
   <mat-grid-list cols="2" rowHeight="3:2">
     <mat-grid-tile class="grid">
       <mat-card class="card-wrap-one">
-        <mat-card-header>
-          <mat-card-title class="c-title">Unveil</mat-card-title>
-        </mat-card-header>
+          <mat-card-title class="c-title">Unveil</mat-card-title>       
         <mat-card-content class="c-content">
-          <p>
+          <h4>
             An education platform focused on teaching new ideas,developing your skills and bringing out the best in you to expand your knowledge and to unveil inward potentials.
-          </p>
+          </h4>
         </mat-card-content>
       </mat-card>
       
@@ -84,16 +83,15 @@
       </mat-grid-tile>
       <mat-grid-tile class="gc-container">
         <mat-card class="card-wrap-two">
-          <mat-card-header>
             <mat-card-title class="c-title">Be an Instructor today</mat-card-title>
-          </mat-card-header>
           <mat-card-content class="c-content">
+            <h4>
+              Instructors from all around the world take you through a stress free and amazing learning process.
+            </h4>
             <p>
-              Insructors from all around the world take you through a stress free and amazing learning process.
+              Want to be an Instructor?
             </p>
-            <p>Want to be an Instructor?
-              <a mat-flat-button routerLink="#" class="">Register</a>
-            </p>
+            <a mat-flat-button routerLink="#" class="lg-btn">Register</a>
           </mat-card-content>
         </mat-card>
       </mat-grid-tile>
