--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -39,7 +39,7 @@
         <img class="logo" src="assets/icons/logo.png" alt="logo">
       </a>
       <div class="spacer"></div>
-      <div fxHide.gt-xs="true">
+      <div fxHide.gt-xs="false" >
         <a mat-button routerLink="Home">Home</a>
         <a mat-button routerLink="resources">About Us</a>
         <a mat-button routerLink="solutions">Resources</a>
